--- a/index.html
+++ b/index.html
@@ -16,64 +16,64 @@
     <h1 class="cabe">MODA</h1>
     <section class="me">
         <Div></Div>
-            <h1> TRIO DE VASOS</h1>
+            <h1> ENCONTRE SEU ESTILO</h1>
             <img class='imagem1'src="figura.jpeg" alt=" figura">
             <p CLASS="frase">Quando tudo for pedra, atire a primeira flor. </p>
         </Div>
     </section>
     <SEction class="parteum">
         <DIV>
-            <h1> FLORES DO CAMPO</h1>
-            <img class='imagem1'src="flores2.jpeg" alt=" figura">
+            <h1>INDIE</h1>
+            <img class='imagem1'src="SOSO.jpg" alt=" figura">
 
         </DIV>
         <DIV>
-            <h1> FLORES NO CAMPO</h1>
-            <img class='imagem1'src="flores3.jpeg" alt=" figura">
+            <h1>VINTAGE</h1>
+            <img class='imagem1'src="SOFI.jpg" alt=" figura">
         </DIV>
         <DIV>
-            <h1>GÊRANIO</h1>      
-            <img class='imagem1'src="flores4.jpeg" alt=" figura">
+            <h1>STREET</h1>      
+            <img class='imagem1'src="RARA.jpg" alt=" figura">
         </DIV> 
         <DIV>
-            <h1>ROSAS</h1>      
-            <img class='imagem1'src="flores5.jpeg" alt=" figura">
+            <h1>GLAM</h1>      
+            <img class='imagem1'src="GLAM.jpg" alt=" figura">
         </DIV> 
     </SEction>
     <SEction class="partedois">
         <DIV>
-            <h1> NEGRA</h1>      
-            <img class='imagem1'src="flores6.jpeg" alt=" figura">
+            <h1>ESPORTIVO</h1>      
+            <img class='imagem1'src="ESPORTIVO.jpg" alt=" figura">
         </DIV>
         <DIV>
-            <h1> GATINHO</h1>      
-            <img class='imagem1'src="flores7.jpeg" alt=" figura">
+            <h1>FOLK</h1>      
+            <img class='imagem1'src="FOLK.jpg" alt=" figura">
         </DIV>
         <DIV>
-            <h1> LARANJA</h1>     
-            <img class='imagem1'src="flores8.jpeg" alt=" figura">
+            <h1>TOMBOY</h1>     
+            <img class='imagem1'src="TOMBOY.jpg" alt=" figura">
         </DIV>
         <DIV>
-            <h1>VÁRIAS ROSAS</h1>      
-            <img class='imagem1'src="flores1.jpeg" alt=" figura">
+            <h1>CLÁSSICO</h1>      
+            <img class='imagem1'src="SISI.jpg" alt=" figura">
         </DIV> 
     </SEction>
     <SEction class="partetres">
         <DIV>
-            <h1> AMOR PERFEITO</h1>     
-            <img class='imagem1'src="flores9.jpeg" alt=" figura">
+            <h1>CASUAL</h1>     
+            <img class='imagem1'src="CASUAL.jpg" alt=" figura">
         </DIV>
         <DIV>
-            <h1> CEREJEIRA</h1>      
-            <img class='imagem1'src="flores10.jpeg" alt=" figura">
+            <h1>COMFY</h1>      
+            <img class='imagem1'src="sla.jpg" alt=" figura">
         </DIV>
         <DIV>
-            <h1> ARMY</h1>      
-            <img class='imagem1'src="flores11.jpeg" alt=" figura">
+            <h1>MINIMALISTA</h1>      
+            <img class='imagem1'src="fock.jpg" alt=" figura">
         </DIV>
         <DIV>
-            <h1>AZUL</h1>      
-            <img class='imagem1'src="flores13.jpeg" alt=" figura">
+            <h1>GRUNGE</h1>      
+            <img class='imagem1'src="rock.jpg" alt=" figura">
         </DIV> 
     </SEction>
     
